[UP] correct year and size pictures on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -501,8 +501,8 @@ footer {
     }
 
     .img-character {
-        width: 140px;
-        height: 140px;
+        width: 145px;
+        height: 145px;
     }
 
     .character-title {
